<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/activity_quiz_background_image"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/activity_quiz_playerNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/activity_quiz_textview_background"
        android:gravity="center_horizontal"
        android:hint="@string/player_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:padding="5dp"
        tools:text="Name" />

    <TextView
        android:id="@+id/activity_quiz_selectedDifficultyTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/activity_quiz_textview_background"
        android:gravity="center_horizontal"
        android:hint="@string/difficulty"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:padding="5dp"
        tools:text="Difficulty" />

    <TextView
        android:id="@+id/activity_quiz_currentScoreTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/activity_quiz_textview_background"
        android:gravity="center_horizontal"
        android:hint="@string/points"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:padding="5dp"
        tools:text="Current Points: 0/10" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="25dp"
        app:cardBackgroundColor="#1F6C66"
        android:layout_marginBottom="50dp">

        <LinearLayout
            android:id="@+id/activity_quiz_progressBarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_gravity="center"
            android:gravity="center">

            <ProgressBar
                android:id="@+id/activity_quiz_circularProgressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/activity_quiz_loadingTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading" />

        </LinearLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/activity_quiz_viewPager2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp" />

    </androidx.cardview.widget.CardView>


</LinearLayout>