<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/activity_quiz_viewPager_fragment_questionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:padding="15dp"
            android:background="@drawable/activity_quiz_viewpager_textview_background"
            android:textColor="#E7E6E3"
            tools:text="Question" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/activity_quiz_viewPager_fragment_optionOneTextView"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:background="@drawable/activity_quiz_viewpager_textview_background"
                android:textColor="#E7E6E3"
                tools:text="Option One" />

            <TextView
                android:id="@+id/activity_quiz_viewPager_fragment_optionTwoTextView"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:background="@drawable/activity_quiz_viewpager_textview_background"
                android:textColor="#E7E6E3"
                tools:text="Option Two" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/activity_quiz_viewPager_fragment_optionThreeTextView"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:background="@drawable/activity_quiz_viewpager_textview_background"
                android:textColor="#E7E6E3"
                tools:text="Option Three" />

            <TextView
                android:id="@+id/activity_quiz_viewPager_fragment_optionFourTextView"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:background="@drawable/activity_quiz_viewpager_textview_background"
                android:textColor="#E7E6E3"
                tools:text="Option Four" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/activity_quiz_viewPager_fragment_submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#808"
                android:layout_marginEnd="25dp"
                android:text="@string/submit" />

            <Button
                android:id="@+id/activity_quiz_viewPager_fragment_finishQuizButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#808"
                android:visibility="gone"
                android:text="@string/finish_quiz" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="25dp">

            <ProgressBar
                android:id="@+id/activity_quiz_viewPager_fragment_progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="90"
                android:padding="10dp"
                android:max="100"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:indeterminate="false" />

            <TextView
                android:id="@+id/activity_quiz_viewPager_fragment_currentFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:padding="7dp"
                android:layout_marginTop="10dp"
                android:text="@string/current_fragment" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>